tap/data/api-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-portal-ingress
  namespace: api-portal
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: api-portal.tanzu.beenotice.eu
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-portal-server
                port:
                  number: 8080
